--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -20,8 +20,8 @@
     <!-- This is navbar -->
     <section class=" font-poppins  shadow-lg   relative">
         <div class="max-w-6xl px-4 mx-auto " x-data="{open:false} ">
-            <nav class="flex justify-between   py-4 ">
-                <a href="" class="text-[2.3rem] text-cyan-500 font-bold leading-none dark:text-gray-400">M<span class="text-gray-700 text-[1.6rem]">ediFill</span></a>
+            <nav class="flex justify-between   py-2 ">
+                <a href="" class="text-[2.3rem] text-cyan-500 font-bold leading-none dark:text-gray-400"><img class="h-[4.3rem] w-[9rem]" src="logo-removebg-preview.png" alt=""></a>
                 <div class="flex lg:hidden">
                     <a href="#"
                         class="inline-block px-4 py-3 mr-2 text-xs font-semibold leading-none text-blue-600 border border-blue-400 rounded dark:hover:text-blue-300 dark:text-gray-400 dark:border-gray-400 hover:text-blue-700 hover:border-blue-300">
@@ -51,21 +51,21 @@
                     <li><a href="#Department" class="text-lg text-gray-700 font-semibold  hover:text-cyan-500 dark:text-gray-400 dark:hover:text-blue-300">Medicine </a>
                     </li>
                 </ul>
-                <div class="hidden lg:flex gap-[2rem]">
-                    <a href="#" class="text-[1.8rem] text-gray-700">
+                <div class="hidden mt-[0.6rem] lg:flex gap-[2rem]">
+                    <a href="#" class="text-[1.8rem] text-gray-700 hover:text-cyan-500">
                         <i class="ri-account-circle-line"></i>
-                       <span class="text-[1.4rem] font-semibold text-gray-700"> Hello,Log in</span>
+                       <span class="text-[1.3rem] font-semibold text-gray-700 hover:text-cyan-500 "> Hello,Log in</span>
                     </a> 
-                    <a href="#" class="text-[1.8rem] text-gray-700">
+                    <a href="#" class="text-[1.8rem] text-gray-700 hover:text-cyan-500">
                         <i class="ri-store-line"></i>
-                       <span class="text-[1.4rem] font-semibold text-gray-700"> Shop</span>
+                       <span class="text-[1.3rem] font-semibold text-gray-700 hover:text-cyan-500 "> Shop</span>
                     </a> 
-                    <a href="" class="text-[1.8rem] text-gray-700">
+                    <a href="" class="text-[1.8rem] text-gray-700 hover:text-cyan-500">
                         <i class="ri-shopping-cart-line"></i>
-                        <span class="text-[1.4rem] font-semibold text-gray-700"> Cart</span>
+                        <span class="text-[1.3rem] font-semibold text-gray-700 hover:text-cyan-500 "> Cart</span>
                     </a>
               
-                <a href="" class="text-[1.8rem] text-gray-700">
+                <a href="" class="text-[1.8rem] text-gray-700 hover:text-cyan-500">
                     <i class="ri-account-circle-line"></i>
                 </a>
             </nav>
