--- a/Navbar/index.html
+++ b/Navbar/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login  page</title>
-      <!-- Tailwinds css cdn -->
+    <title>Document</title>
+        <!-- Tailwinds css cdn -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Normal css link -->
   <link rel="stylesheet" href="style.css">
@@ -16,9 +16,8 @@
    <!-- fontawosame  icon cdn -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="  ">
-    <!-- This is navbar -->
-    <nav x-data="{ isOpen: false }" class="relative bg-white shadow-lg dark:bg-gray-800">
+<body>
+    <nav x-data="{ isOpen: false }" class="relative  bg-white shadow-lg dark:bg-gray-800">
         <div class="container  mx-auto md:flex md:justify-between md:items-center">
             <div class="flex items-center justify-between">
                 <a href="#">
@@ -60,7 +59,7 @@
                         </li>
                         <button class="text-white  bg-[#10847e] h-[3rem] w-[6rem] p-[0.3rem] border-2 rounded-full">Sign Up</button>  
                         <a class="relative  text-gray-600 transition-colors duration-300 transform dark:text-gray-200 hover:text-gray-600 dark:hover:text-gray-300" href="#">
-                            <i  class="ri-shopping-cart-2-line text-[2rem] "></i>
+                            <i  class="ri-shopping-cart-2-line text-[2rem] hover:text-cyan-500 "></i>
                         </a>
                     </ul>
     
@@ -70,44 +69,5 @@
             </div>
         </div>
     </nav>
-    <section class="flex justify-center gap-5 mt-[5rem]  ">
- <div class="">
-    <h1 class="font-bold  text-end text-[2rem] text-gray-600 pr-[17rem] ">Welcome to MediFill</h1>
-    <p class="font-bold text-end text-[1rem] text-[#10847e] pr-[17rem]">Login with us and get exclusive Discounts  <br> & Savings on Medicines.
-        Get express delivery in 2hrs</p>
-        <img class="h-[23rem] pr-[10rem]"  src="Login.png" alt="">
- </div>
- <div>
-    <div class="flex flex-col max-w-md p-6  border-2  rounded-md sm:p-10 dark:bg-gray-50 dark:text-gray-800">
-        <div class="mb-8 text-center">
-            <h1 class="my-3 text-4xl text-[#10847e] font-bold">Log in</h1>
-            <p class="text-sm font-semibold text-gray-500 dark:text-gray-600">Log in to access your account</p>
-        </div>
-        <form novalidate="" action="" class="space-y-12">
-            <div class="space-y-4">
-                <div>
-                    <label for="email" class="block text-gray-500 mb-2 font-semibold text-sm">Email address</label>
-                    <input type="email" name="email" id="email" placeholder="Email" class="w-full  px-3 py-2 border rounded-md dark:border-gray-300 dark:bg-gray-50 dark:text-gray-800" fdprocessedid="tz5jwb">
-                </div>
-                <div>
-                    <div class="flex justify-between mb-2">
-                        <label for="password" class="text-sm font-semibold text-gray-500">Password</label>
-                        <a rel="noopener noreferrer" href="#" class="text-xs hover:underline text-gray-500 dark:text-gray-600">Forgot password?</a>
-                    </div>
-                    <input type="password" name="password" id="password" placeholder="*****" class="w-full px-3 py-2 border rounded-md dark:border-gray-300 dark:bg-gray-50 dark:text-gray-800" fdprocessedid="vahk7f">
-                </div>
-            </div>
-            <div class="space-y-2">
-                <div>
-                    <button type="button" class="w-full px-8 py-3 font-semibold rounded-md dark:bg-violet-600 dark:text-gray-50 text-white bg-[#10847e] w-[6rem] p-[0.3rem] border-2 rounded-full" fdprocessedid="nnowpb">Log in</button>
-                </div>
-                <p class="px-6 text-sm text-center dark:text-gray-600 font-semibold text-gray-500 ">Don't have an account yet?
-                    <a rel="noopener noreferrer" href="#" class="hover:underline text-[#10847e] dark:text-violet-600">Sign in</a>.
-                </p>
-            </div>
-        </form>
-    </div>
- </div>
-    </section>
 </body>
 </html>
